Apply formatting changes